--- a/src/app/common-shipment/memo/memo-edit/memo-edit.component.html
+++ b/src/app/common-shipment/memo/memo-edit/memo-edit.component.html
@@ -2,8 +2,6 @@
   <div class="col-md-12">
     <div class="page-header">
       <h5>{{title}}</h5>
-      <!-- <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/seaimport/seaimportmEdit"
-        [queryParams]="{id :0, _id:id+1,mode:'add',menuid:menuid,type:type,appid:appid}">New</button> -->
       <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
       <app-history [inputdata]="{table: 'cargo_memo', id:parent_id}"></app-history>
     </div>
@@ -15,9 +13,8 @@
           <div class="col-sm-9">
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm" for="">Date</label>
-              <div class="col-sm-8">
-                <app-date formControlName="memo_date" [format]="gs.globalConstants.global_date_format"
-                  [placeholder]="gs.globalConstants.global_date_format"></app-date>
+              <div class="col-sm-8">                
+                <label>{{mform.get('memo_date')?.value|date: gs.globalConstants.global_output_datetime_format}}</label>
               </div>
             </div>
             <div class="form-group row">
@@ -56,12 +53,13 @@
               <thead class="table-success">
                 <tr class="table-header">
                   <th>EDIT</th>
-                  <th *ngIf="showModel">ORDER</th>
                   <th>CREATED-BY</th>
                   <th>DATE</th>
                   <th>MEMO</th>
                   <th>ATTACHMENTS</th>
                   <th>DELETE</th>
+                  <th *ngIf="showModel">EDITED-BY</th>
+                  <th *ngIf="showModel">EDITED-DATE</th>
                 </tr>
               </thead>
 
@@ -79,7 +77,7 @@
                   </td>
 
                   <td>
-                    <label>{{iRow.get('memo_date')?.value}}</label>
+                    <label>{{iRow.get('memo_date')?.value|date: gs.globalConstants.global_output_datetime_format}}</label>
                   </td>
 
                   <td>
@@ -87,7 +85,15 @@
                   </td>
 
                   <td>
-                    <label>{{iRow.get('')?.value}}</label>
+                    <label>{{iRow.get('')?.value}}</label> <!--rec_attachment-->
+                  </td>
+                  
+                  <td *ngIf="showModel">
+                    <label>{{iRow.get('rec_edited_by')?.value}}</label>
+                  </td>
+
+                  <td *ngIf="showModel">
+                    <label>{{iRow.get('rec_edited_date')?.value}}</label>
                   </td>
 
                   <td align="centre" (click)="deleteRow(i, iRow.get('memo_id')?.value)" class="link">
