--- a/src/app/seaexport/seaexportm/seaexportm-edit/seaexportm-edit.component.html
+++ b/src/app/seaexport/seaexportm/seaexportm-edit/seaexportm-edit.component.html
@@ -382,86 +382,28 @@
     </div>
   </div>
 
-  <div class="col-md-2 border-top" *ngIf="mform.get('mbl_id')?.value != 0">
-    <div class="page-body line-bottom ">
+  <div class="col-sm-2" *ngIf="mode=='edit'">
+    <div class="page-body line-bottom">
       <div class="row">
         <div class="col-sm-12">
-          <div class="form-group row">
-            <div class="col-sm-12 ">
-              <button class="btn btn-sm btn-success w-100 mb-2">BOOKING</button>
-            </div>
-
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">MBL INSTRUCTION</button>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">DOCK RECEIPT</button>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">MANIFEST</button>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">AR & AP</button>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">PROFIT REPORT</button>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">SHIPMENT LABEL</button>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">MESSENGER SLIP</button>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">PAYMENT REQUEST</button>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">ATTACHMENTS</button>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">ADD TO FOLLOW UP</button>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2" routerLink="/memo/memoEdit"
-              [queryParams]="{ id:0, parent_id: mform.get('mbl_id')?.value,parent_type:'SEAEXP-CNTR-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid}">INTERNAL MEMO</button>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">REQUEST FOR APPROVAL</button>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">CERTIFICATE OF ORIGIN</button>
-            </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">SAVE</button>
-            </div>
+          <div class="d-grid gap-1">
+            <button class="btn btn-success btn-sm">BOOKING</button>
+            <button class="btn btn-success btn-sm">MBL INSTRUCTION</button>
+            <button class="btn btn-success btn-sm">DOCK RECEIPT</button>
+            <button class="btn btn-success btn-sm">MANIFEST</button>
+            <button class="btn btn-success btn-sm">AR & AP</button>
+            <button class="btn btn-success btn-sm">PROFIT REPORT</button>
+            <button class="btn btn-success btn-sm">SHIPMENT LABEL</button>
+            <button class="btn btn-success btn-sm">MESSENGER SLIP</button>
+            <button class="btn btn-success btn-sm">PAYMENT REQUEST</button>
+            <button class="btn btn-success btn-sm">ATTACHMENTS</button>
+            <button class="btn btn-success btn-sm">ADD TO FOLLOW UP</button>
+            <button class="btn btn-success btn-sm" routerLink="/common-shipment/memoEdit"
+            [queryParams]="{ id:0, parent_id: mform.get('mbl_id')?.value,parent_type:'SEAEXP-CNTR-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid}">INTERNAL MEMO</button>
+            <button class="btn btn-success btn-sm">REQUEST FOR APPROVAL</button>
+            <button class="btn btn-success btn-sm">CERTIFICATE OF ORIGIN</button>
+            <button *ngIf="bAdd || bEdit"  class="btn btn-success btn-sm"(click)="save()"
+            [disabled]="mform.invalid">Save</button>
           </div>
         </div>
       </div>
