--- a/src/app/common-shipment/memo/memo-edit/memo-edit.component.html
+++ b/src/app/common-shipment/memo/memo-edit/memo-edit.component.html
@@ -8,7 +8,7 @@
 
     <form [formGroup]="mform">
 
-      <div class="page-body">
+      <div class="page-body ">
         <div class="row">
           <div class="col-sm-9">
             <div class="form-group row">
@@ -36,7 +36,7 @@
 
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm"></label>
-              <div class="col-sm-8">
+              <div class="col-sm-8 gap-1">
                 <button class="btn btn-sm btn-success me-2" type="button" (click)="save()" [disabled]="mform.invalid">{{
                   mode
                   === 'add' ? 'Add' : 'Update'}}</button>
@@ -46,7 +46,7 @@
           </div>
         </div>
       </div>
-      <div class="page-body">
+      <div class="page-body line-bottom">
         <div class="row">
           <div class="col-sm-12">
             <table class="table table-sm table-hover table-bordered table-striped table-condensed">
