--- a/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
+++ b/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
@@ -548,7 +548,9 @@
             <button class="btn btn-success btn-sm">MESSENGER SLIP</button>
             <button class="btn btn-success btn-sm">PAYMENT REQUEST</button>
             <button class="btn btn-success btn-sm">ATTACHMENTS</button>
-            <button class="btn btn-success btn-sm">ADD TO FOLLOW UP</button>
+            <button class="btn btn-success btn-sm" routerLink="/common-shipment/followupEdit"
+            [queryParams]="{id : 0 ,mode:'add', menuid:'FOLLOWUP', type:'FOLLOWUP', appid: appid, mbl_id: mform.get('mbl_id')?.value, mbl_refno: mform.get('mbl_refno')?.value, mbl_ref_date: mform.get('mbl_ref_date')?.value}"
+            >ADD TO FOLLOW UP</button>
             <button class="btn btn-success btn-sm"  routerLink="/common-shipment/memoEdit"
             [queryParams]="{ id:0, parent_id: mform.get('mbl_id')?.value,parent_type:'SEAIMP-CNTR-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid }">INTERNAL MEMO</button>
             <button class="btn btn-success btn-sm">REQUEST FOR APPROVAL</button>
