--- a/src/app/seaimport/seaimporth/seaimporth-edit/seaimporth-edit.component.html
+++ b/src/app/seaimport/seaimporth/seaimporth-edit/seaimporth-edit.component.html
@@ -1080,7 +1080,7 @@
             <button class="btn btn-success btn-sm">PRE-ADVISE</button>
             <button class="btn btn-success btn-sm">TURNOVER LETTER</button>
             <button class="btn btn-success btn-sm" routerLink="/common-shipment/deliveryorderEdit"
-            [queryParams]="{ id:0, parent_id: mform.get('hbl_id')?.value,parent_type:'SEA-IMPORT-H', mode: 'add',menuid:'DELIVERY ORDER', type: 'DELIVERY ORDER', appid: appid }"
+            [queryParams]="{ parent_id: mform.get('hbl_id')?.value,mode: 'add',parent_type:'SEA-IMPORT-H',menuid:'DELIVERY ORDER', type: 'DELIVERY ORDER', appid: appid }"
             >DELIVERY ORDER</button>
             <button class="btn btn-success btn-sm">US CUSTOM HOLD</button>
             <button class="btn btn-success btn-sm">DEVAN/INSTRUCTIONS</button>
