--- a/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
+++ b/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
@@ -520,7 +520,7 @@
             <div class="row" *ngIf=" mform.get('mbl_id')?.value != 0">
               <div class="col-md-12 text-center mb-2">
                 <button *ngIf="bAdd" class="btn btn-sm btn-info" type="button" routerLink="/seaimport/seaimporthEdit"
-                  [queryParams]="{ id:0, mbl_id: mform.get('mbl_id')?.value, mode: 'add',menuid:'SEA-EXPORT-H', type: 'SEA-EXPORT-H', appid: appid }">
+                  [queryParams]="{ id:0, mbl_id: mform.get('mbl_id')?.value, mode: 'add',menuid:'SEA-IMPORT-H', type: 'SEA-IMPORT-H', appid: appid }">
                   Add House</button>
               </div>
             </div>
