--- a/src/app/common-shipment/deliveryorder/deliveryorder-list/deliveryorder-list.component.html
+++ b/src/app/common-shipment/deliveryorder/deliveryorder-list/deliveryorder-list.component.html
@@ -1,13 +1,13 @@
 <div class="page-header">
   <h5>{{title}}</h5>
   <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/common-shipment/deliveryorderEdit"
-  [queryParams]="{id :0, mode:'add',menuid:menuid,type:type,appid:appid}">New</button>
+  [queryParams]="{id :0, mode:'add',menuid:menuid,type:type,appid:appid, parent_type: 'GENERAL'}">New</button>
   <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
 </div>
 
 <div class="page-search">
   <app-deliveryorder-search [search_url]="'/api/CommonShipment/deliveryorder/GetListAsync'" [input]="ms.getSearchRecord()"
-    (searchResult)="search($event)"></app-deliveryorder-search>
+    (searchResult)="search($event)" [parent_type]="parent_type"></app-deliveryorder-search>
 </div>
 
 <div class="page-pagination">
