DO front completed

--- a/src/app/seaexport/seaexportm/seaexportm-edit/seaexportm-edit.component.html
+++ b/src/app/seaexport/seaexportm/seaexportm-edit/seaexportm-edit.component.html
@@ -4,8 +4,8 @@
       <h5>{{title}}</h5>
       <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/seaexport/seaexportmEdit"
         [queryParams]="{id :0, _id:id+1,mode:'add',menuid:menuid,type:type,appid:appid}">New</button>
-      <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
       <app-history [inputdata]="{table: 'cargo_masterm', id:id}"></app-history>
+      <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
     </div>
 
     <form [formGroup]="mform">
@@ -248,7 +248,7 @@
                     <auto-complete formControlName="cntr_type_name" id="cntr_type_name-{{i}}" name="cntr_type_name"
                       fieldName="cntr_type" [rowIndex]="i" (CallBack)="callBack($event)" [table]="'param'"
                       [subtable]="'container-type'" [company_id]="getCompanyId()" [url]="url"
-                      display_column="[{'caption':'ID','value':'param_id'},{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
+                      display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
                   </td>
                   <td>
                     <app-input formControlName="cntr_sealno" [rowIndex]="i" name="cntr_sealno" case="UPPER"></app-input>
@@ -262,7 +262,7 @@
                       name="cntr_packages_unit_name" fieldName="cntr_packages_unit_name" [rowIndex]="i"
                       (CallBack)="callBack($event)" [table]="'param'" [subtable]="'unit-master'"
                       [company_id]="getCompanyId()" [url]="url"
-                      display_column="[{'caption':'ID','value':'param_id'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
+                      display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
                   </td>
                   <td>
                     <app-input formControlName="cntr_weight" [rowIndex]="i" name="cntr_weight"
@@ -351,11 +351,6 @@
                   <td>
                     <label>{{iRow.get('rec_created_date')?.value}}</label>
                   </td>
-                  <!-- <td align="centre" [routerLink]="['/seaexport/seaexporthEdit']"
-                [queryParams]="{ id:0, mbl_id: mform.get('mbl_id')?.value, mode: 'add',menuid:'SEA-EXPORT-H', type: 'SEA-EXPORT-H', appid: appid }"
-                class="link">
-                <i class="fa fa-plus"></i>
-              </td> -->
                   <td align="centre" (click)="deleteHouse(i,iRow.get('hbl_houseno')?.value,iRow.get('hbl_id')?.value)"
                     class="link">
                     <i class="fa fa-trash"></i>
