--- a/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
+++ b/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
@@ -4,8 +4,8 @@
       <h5>{{title}}</h5>
       <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/seaimport/seaimportmEdit"
         [queryParams]="{id :0, _id:id+1,mode:'add',menuid:menuid,type:type,appid:appid}">New</button>
-      <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
-      <app-history [inputdata]="{table: 'cargo_masterm', id:id}"></app-history>
+        <app-history [inputdata]="{table: 'cargo_masterm', id:id}"></app-history>
+        <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
     </div>
 
     <form [formGroup]="mform">
@@ -360,7 +360,7 @@
                     <auto-complete formControlName="cntr_type_name" id="cntr_type_name-{{i}}" name="cntr_type_name"
                       fieldName="cntr_type" [rowIndex]="i" (CallBack)="callBack($event)" [table]="'param'"
                       [subtable]="'container-type'" [company_id]="getCompanyId()" [url]="url"
-                      display_column="[{'caption':'ID','value':'param_id'},{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
+                      display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
                   </td>
                   <td>
                     <app-input formControlName="cntr_sealno" [rowIndex]="i" name="cntr_sealno" case="UPPER"></app-input>
